Fixing bug 153830. Making alert(null) display "null" in the alert, in stead of nothing at all. r=caillon@aillon.org, sr=peterv@propagandism.org, a=asa@mozilla.org